cbits/Bullet.h

void* btWheelInfo_RaycastInfo_new(); //constructor: RaycastInfo  ( ::btWheelInfo::RaycastInfo::* )(  ) 
void btWheelInfo_RaycastInfo_free(void *c);
 
void btWheelInfo_RaycastInfo_m_contactNormalWS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo_RaycastInfo->m_contactNormalWS
void btWheelInfo_RaycastInfo_m_contactNormalWS_get(void *c,float* a);
void btWheelInfo_RaycastInfo_m_contactPointWS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo_RaycastInfo->m_contactPointWS
void btWheelInfo_RaycastInfo_m_contactPointWS_get(void *c,float* a);
void btWheelInfo_RaycastInfo_m_suspensionLength_set(void *c,float a); //attribute: ::btScalar btWheelInfo_RaycastInfo->m_suspensionLength
float btWheelInfo_RaycastInfo_m_suspensionLength_get(void *c); //attribute: ::btScalar btWheelInfo_RaycastInfo->m_suspensionLength
void btWheelInfo_RaycastInfo_m_hardPointWS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo_RaycastInfo->m_hardPointWS
void btWheelInfo_RaycastInfo_m_hardPointWS_get(void *c,float* a);
void btWheelInfo_RaycastInfo_m_wheelDirectionWS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo_RaycastInfo->m_wheelDirectionWS
void btWheelInfo_RaycastInfo_m_wheelDirectionWS_get(void *c,float* a);
void btWheelInfo_RaycastInfo_m_wheelAxleWS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo_RaycastInfo->m_wheelAxleWS
void btWheelInfo_RaycastInfo_m_wheelAxleWS_get(void *c,float* a);
void btWheelInfo_RaycastInfo_m_isInContact_set(void *c,int a); //attribute: bool btWheelInfo_RaycastInfo->m_isInContact
int btWheelInfo_RaycastInfo_m_isInContact_get(void *c); //attribute: bool btWheelInfo_RaycastInfo->m_isInContact
void btWheelInfo_RaycastInfo_m_groundObject_set(void *c,void* a); //attribute: void * btWheelInfo_RaycastInfo->m_groundObject
void* btWheelInfo_RaycastInfo_m_groundObject_get(void *c); //attribute: void * btWheelInfo_RaycastInfo->m_groundObject
void* btDefaultVehicleRaycaster_new(void* p0); //constructor: btDefaultVehicleRaycaster  ( ::btDefaultVehicleRaycaster::* )( ::btDynamicsWorld * ) 
void btDefaultVehicleRaycaster_free(void *c);
 
void* btDefaultVehicleRaycaster_castRay(void *c,float* p0,float* p1,void* p2); //method: castRay void * ( ::btDefaultVehicleRaycaster::* )( ::btVector3 const &,::btVector3 const &,::btVehicleRaycaster::btVehicleRaycasterResult & ) 
void btDefaultVehicleRaycaster_m_dynamicsWorld_set(void *c,void* a); //attribute: ::btDynamicsWorld * btDefaultVehicleRaycaster->m_dynamicsWorld
void* btDefaultVehicleRaycaster_m_dynamicsWorld_get(void *c); //attribute: ::btDynamicsWorld * btDefaultVehicleRaycaster->m_dynamicsWorld
void* btRaycastVehicle_new(void* p0,void* p1,void* p2); //constructor: btRaycastVehicle  ( ::btRaycastVehicle::* )( ::btRaycastVehicle::btVehicleTuning const &,::btRigidBody *,::btVehicleRaycaster * ) 
void btRaycastVehicle_free(void *c);
 
void btRaycastVehicle_updateSuspension(void *c,float p0); //method: updateSuspension void ( ::btRaycastVehicle::* )( ::btScalar ) 
void* btRaycastVehicle_getRigidBody(void *c); //method: getRigidBody ::btRigidBody * ( ::btRaycastVehicle::* )(  ) 
void* btRaycastVehicle_getRigidBody0(void *c); //method: getRigidBody ::btRigidBody * ( ::btRaycastVehicle::* )(  ) 
void* btRaycastVehicle_getRigidBody1(void *c); //method: getRigidBody ::btRigidBody const * ( ::btRaycastVehicle::* )(  ) const
int btRaycastVehicle_getUserConstraintId(void *c); //method: getUserConstraintId int ( ::btRaycastVehicle::* )(  ) const