Physics/Bullet/Raw/BulletDynamics/Vehicle.chs

{-#LANGUAGE ForeignFunctionInterface#-}
#include "Bullet.h"
module Physics.Bullet.Raw.BulletDynamics.Vehicle (
module Physics.Bullet.Raw.BulletDynamics.Vehicle
) where
import Control.Monad
import Foreign.Marshal.Alloc
import Foreign.ForeignPtr
import Foreign.Ptr
import Physics.Bullet.Raw.C2HS
import Physics.Bullet.Raw.Types
import Physics.Bullet.Raw.Class
-- * RaycastInfo
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_new as btWheelInfo_RaycastInfo    {  } -> `BtWheelInfo_RaycastInfo' mkBtWheelInfo_RaycastInfo* #}
{#fun btWheelInfo_RaycastInfo_free    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#43>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_contactNormalWS_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#43>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_contactNormalWS_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#44>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_contactPointWS_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#44>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_contactPointWS_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_suspensionLength_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_suspensionLength_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_hardPointWS_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_hardPointWS_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#47>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_wheelDirectionWS_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#47>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_wheelDirectionWS_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_wheelAxleWS_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_wheelAxleWS_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#49>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_isInContact_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#49>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_isInContact_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#50>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_groundObject_set    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc' , withVoidPtr* `VoidPtr'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#50>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_RaycastInfo_m_groundObject_get    `( BtWheelInfo_RaycastInfoClass bc )' =>     { withBt* `bc'  } ->  `VoidPtr'  mkVoidPtr* #}
-- * btDefaultVehicleRaycaster
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#225>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btDefaultVehicleRaycaster_new as btDefaultVehicleRaycaster    `( BtDynamicsWorldClass p0 )' =>     {  withBt* `p0'  } -> `BtDefaultVehicleRaycaster' mkBtDefaultVehicleRaycaster* #}
{#fun btDefaultVehicleRaycaster_free    `( BtDefaultVehicleRaycasterClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#230>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btDefaultVehicleRaycaster_castRay as btDefaultVehicleRaycaster_castRay    `( BtDefaultVehicleRaycasterClass bc , BtVehicleRaycaster_btVehicleRaycasterResultClass p2 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ from
, withVec3* `Vec3'  peekVec3* -- ^ to
, withBt* `p2'  -- ^ result
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#230>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btDefaultVehicleRaycaster_castRay as btDefaultVehicleRaycaster_castRay'    `( BtDefaultVehicleRaycasterClass bc , BtVehicleRaycaster_btVehicleRaycasterResultClass p2 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ from
, allocaVec3-  `Vec3'  peekVec3* -- ^ to
, withBt* `p2'  -- ^ result
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#223>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btDefaultVehicleRaycaster_m_dynamicsWorld_set    `( BtDefaultVehicleRaycasterClass bc , BtDynamicsWorldClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#223>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btDefaultVehicleRaycaster_m_dynamicsWorld_get    `( BtDefaultVehicleRaycasterClass bc )' =>     { withBt* `bc'  } ->  `BtDynamicsWorld'  mkBtDynamicsWorld* #}
-- * btRaycastVehicle
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#79>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_new as btRaycastVehicle    `( BtRaycastVehicle_btVehicleTuningClass p0 , BtRigidBodyClass p1 , BtVehicleRaycasterClass p2 )' =>     {  withBt* `p0' , withBt* `p1' , withBt* `p2'  } -> `BtRaycastVehicle' mkBtRaycastVehicle* #}
{#fun btRaycastVehicle_free    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#140>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_updateSuspension as btRaycastVehicle_updateSuspension    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ deltaTime
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#146>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getRigidBody0 as btRaycastVehicle_getRigidBody    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtRigidBody'  mkBtRigidBody* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#146>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getRigidBody0 as btRaycastVehicle_getRigidBody0    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtRigidBody'  mkBtRigidBody* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#151>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getRigidBody1 as btRaycastVehicle_getRigidBody1    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtRigidBody'  mkBtRigidBody* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#214>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getUserConstraintId as btRaycastVehicle_getUserConstraintId    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
